--- a/UIwpf/addDataToPaitStation.xaml
+++ b/UIwpf/addDataToPaitStation.xaml
@@ -14,7 +14,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="273,127,0,0" TextWrapping="Wrap" Text=":מרחק" VerticalAlignment="Top"/>
         <TextBox x:Name="distance"  HorizontalAlignment="Left" Height="23" Margin="91,124,0,0" TextWrapping="Wrap"  PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="256,152,0,0" TextWrapping="Wrap" Text=":זמן נסיעה" VerticalAlignment="Top" Height="26" Width="54"/>
-        <TextBox x:Name="timeDriving" HorizontalAlignment="Left" Height="23" Margin="91,155,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
+        
         <Button Content="הוסף" HorizontalAlignment="Left" Margin="136,213,0,0" VerticalAlignment="Top" Width="148" Height="31" Click="Button_ClickAddData">
             <Button.Style>
                 <Style>
@@ -31,6 +31,11 @@
         </Button>
         <TextBlock x:Name="nameStaion1"    HorizontalAlignment="Left" Margin="106,95,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation1}" VerticalAlignment="Top"/>
         <TextBlock x:Name="nameStaion2" HorizontalAlignment="Left" Margin="238,93,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation2}" VerticalAlignment="Top"/>
+        <TextBox x:Name="hours" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="101,152,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
+        <TextBlock HorizontalAlignment="Left" Margin="130,154,0,0" TextWrapping="Wrap" Text=":" VerticalAlignment="Top"/>
+        <TextBox x:Name="minutes" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="145,152,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
+        <TextBlock HorizontalAlignment="Left" Margin="179,152,0,0" TextWrapping="Wrap" Text=":" VerticalAlignment="Top"/>
+        <TextBox x:Name="seconds" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="187,152,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
 
 
     </Grid>
