--- a/UIwpf/addTripToLine.xaml
+++ b/UIwpf/addTripToLine.xaml
@@ -13,7 +13,23 @@
         <TextBox x:Name="minutes" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="111,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
         <TextBlock HorizontalAlignment="Left" Margin="144,83,0,0" TextWrapping="Wrap" Text=":" VerticalAlignment="Top"/>
         <TextBox x:Name="seconds" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="153,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
-        <Button Content="הוסף" HorizontalAlignment="Left" Margin="85,126,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickAdd"/>
+        <Button Content="הוסף" HorizontalAlignment="Left" Margin="85,126,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickAdd">
+            <Button.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=hours, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=minutes, Path=Text}" Value="">
+                                <Setter Property="Button.IsEnabled" Value="false"/>
+                            </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=seconds, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <TextBlock HorizontalAlignment="Left" Margin="130,37,0,0" TextWrapping="Wrap" Text=":שמספרו המזהה" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="79,10,0,0" TextWrapping="Wrap" Text="{Binding LineNumber}" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="92,37,0,0" TextWrapping="Wrap" Text="{Binding IdentifyNumber}" VerticalAlignment="Top"/>
