--- a/UIwpf/addTripToLine.xaml
+++ b/UIwpf/addTripToLine.xaml
@@ -8,11 +8,11 @@
         Title="addTripToLine" Height="200" Width="250">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="124,10,0,0" TextWrapping="Wrap" Text=":הוספת יציאה לקו" VerticalAlignment="Top" Height="18" Width="120"/>
-        <TextBox x:Name="hours" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="69,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
+        <TextBox x:Name="hours" MaxLength="2" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" HorizontalAlignment="Left" Height="21" Margin="69,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
         <TextBlock HorizontalAlignment="Left" Margin="102,81,0,0" TextWrapping="Wrap" Text=":" VerticalAlignment="Top"/>
-        <TextBox x:Name="minutes" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="111,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
+        <TextBox x:Name="minutes" MaxLength="2" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" HorizontalAlignment="Left" Height="21" Margin="111,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
         <TextBlock HorizontalAlignment="Left" Margin="144,83,0,0" TextWrapping="Wrap" Text=":" VerticalAlignment="Top"/>
-        <TextBox x:Name="seconds" MaxLength="2" HorizontalAlignment="Left" Height="21" Margin="153,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
+        <TextBox x:Name="seconds" MaxLength="2" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" HorizontalAlignment="Left" Height="21" Margin="153,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
         <Button Content="הוסף" HorizontalAlignment="Left" Margin="85,126,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickAdd">
             <Button.Style>
                 <Style>
