פרויקט גמור בתקווה

--- a/UIwpf/MainWindow.xaml
+++ b/UIwpf/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="תחבורה ציבורית" Height="450" Width="340">
+        Title="תחבורה ציבורית" Height="280" Width="340" Icon="לוגו.jpeg">
     <Grid>
-        <Button Content="נוסע" HorizontalAlignment="Left" Margin="121,257,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickPassenger"/>
-        <Button Content="מנהל" HorizontalAlignment="Left" Margin="121,203,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
+        <Button Content="מידע לנוסע" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="120,169,0,0" VerticalAlignment="Top" Width="94" Click="Button_ClickPassenger" Height="34"/>
+        <Button Content="מנהל" HorizontalAlignment="Left" Margin="242,115,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="145,10,0,0" TextWrapping="Wrap" Text="!ברוך הבא" VerticalAlignment="Top"/>
         <TextBox x:Name="userName" HorizontalAlignment="Left" Height="23" Margin="53,45,0,0" TextWrapping="Wrap" Text="{Binding Path=UserName, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="198,48,0,0" TextWrapping="Wrap" Text=":שם משתמש" VerticalAlignment="Top"/>
@@ -24,9 +25,10 @@
                     </Style.Triggers>
                 </Style>
             </Button.Style>
-            </Button> 
+        </Button>
         <Label MouseDoubleClick="forgetPassWord_doubleClick" Content="שכחתי סיסמה" HorizontalAlignment="Left" Margin="47,115,0,0" VerticalAlignment="Top"/>
-        <Label MouseDoubleClick="signUp_doubleClick" Content="הירשם" HorizontalAlignment="Left" Margin="271,0,0,0" VerticalAlignment="Top"/>
+        <Label MouseDoubleClick="signUp_doubleClick" Content="הירשם" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.493,-0.955" Margin="12,0,0,0"/>
+        <Image HorizontalAlignment="Left" Height="58" Margin="251,0,0,0" VerticalAlignment="Top" Width="72" Source="לוגו.jpeg" RenderTransformOrigin="0.505,0.767"/>
 
 
     </Grid>
