--- a/UIwpf/forgetPassword.xaml
+++ b/UIwpf/forgetPassword.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="forgetPassword" Height="450" Width="450">
+        Title="forgetPassword" Height="450" Width="450" Icon="לוגו.jpeg" >
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="188,10,0,0" TextWrapping="Wrap" Text="שחזור סיסמה" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="333,53,0,0" TextWrapping="Wrap" Text=":שם משתמש" VerticalAlignment="Top"/>
