--- a/UIwpf/passenger.xaml
+++ b/UIwpf/passenger.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="passenger" Height="400" Width="400">
+        Title="passenger" Height="400" Width="400" Icon="לוגו.jpeg">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="120,10,0,0" TextWrapping="Wrap" Text=":הכנס תחנת מוצא ותחנת יעד" VerticalAlignment="Top"/>
         <ComboBox x:Name="lastStationCB"  HorizontalAlignment="Left" Margin="24,117,0,0" VerticalAlignment="Top" Width="254" SelectionChanged="lastStationCB_SelectionChanged"/>
