--- a/UIwpf/addBus.xaml
+++ b/UIwpf/addBus.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="addBus" Height="450" Width="800">
+        Title="addBus" Height="450" Width="800" Icon="לוגו.jpeg">
     <Grid>
         <TextBlock x:Name="addLine111" Text="הוספת אוטובוס"  HorizontalAlignment="Left" Margin="377,0,0,356.667" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="36" Width="92"/>
         <TextBlock HorizontalAlignment="Left" Margin="459,100,0,0" TextWrapping="Wrap" Text=":מספר הרישוי להוספה" VerticalAlignment="Top" Height="23" Width="118"/>
@@ -14,9 +14,9 @@
         <TextBlock HorizontalAlignment="Left" Margin="480,200,0,0" TextWrapping="Wrap" Text=":תאריך רישוי" VerticalAlignment="Top" Height="29" Width="129"/>
         <TextBox x:Name="license" HorizontalAlignment="Left" Height="23" Margin="275,100,0,0" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" MaxLength="8" TextWrapping="Wrap" Text="{Binding Path=License, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="totalKms" HorizontalAlignment="Left" Height="23" Margin="275,150,0,0"  PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown"  TextWrapping="Wrap" Text="{Binding Path=TotalKms, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="addButton" Content="הוסף" HorizontalAlignment="Left" Margin="335,300,0,0" VerticalAlignment="Top" Width="132" Height="40" Click="addButton_Click">
+        <Button x:Name="addButton"  Content="הוסף" HorizontalAlignment="Left" Margin="335,300,0,0" VerticalAlignment="Top" Width="132" Height="40" Click="addButton_Click">
             <Button.Style>
-                <Style>
+                <Style >
                     <Style.Triggers>
                         <DataTrigger Binding="{Binding ElementName=license, Path=Text}" Value="">
                             <Setter Property="Button.IsEnabled" Value="false"/>
