--- a/UIwpf/addDataToPaitStation.xaml
+++ b/UIwpf/addDataToPaitStation.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="addDataToPaitStation" Height="350" Width="420">
+        Title="addDataToPaitStation" Height="350" Width="420" Icon="לוגו.jpeg">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="124,10,0,0" TextWrapping="Wrap" Text="הוספת מידע עבור זוג תחנות עוקבות" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="85,34,0,0" TextWrapping="Wrap" Text=":עליך להכניס את המרחק וזמן הנסיעה בין התחנות" VerticalAlignment="Top"/>
