--- a/UIwpf/addTripToLine.xaml
+++ b/UIwpf/addTripToLine.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="addTripToLine" Height="200" Width="250">
+        Title="addTripToLine" Height="200" Width="250" Icon="לוגו.jpeg">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="124,10,0,0" TextWrapping="Wrap" Text=":הוספת יציאה לקו" VerticalAlignment="Top" Height="18" Width="120"/>
         <TextBox x:Name="hours" MaxLength="2" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" HorizontalAlignment="Left" Height="21" Margin="69,81,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="24"/>
