--- a/UIwpf/deleteTripFromLine.xaml
+++ b/UIwpf/deleteTripFromLine.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="deleteTripFromLine" Height="200" Width="250">
+        Title="deleteTripFromLine" Height="200" Width="250" Icon="לוגו.jpeg">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="124,10,0,0" TextWrapping="Wrap" Text=":מחיקת יציאה מקו" VerticalAlignment="Top" Height="18" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="130,37,0,0" TextWrapping="Wrap" Text=":שמספרו המזהה" VerticalAlignment="Top"/>
