--- a/UIwpf/manager.xaml
+++ b/UIwpf/manager.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="מנהל" Height="450" Width="1300">
+        Title="מנהל" Height="450" Width="1300" Icon="לוגו.jpeg">
     <Window.Resources>
         <DataTemplate x:Key="MyDataTemplateBuses"    DataType="local:MyData" >
             <Grid Grid.IsSharedSizeScope="True">
@@ -20,10 +20,10 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="6" Text=":מספר רישוי" FontFamily="Ink Free" FontSize="12" Foreground="#FF0A0A0E" FontWeight="Bold"/>
                 <TextBlock Grid.Column="5"  Text="{Binding Path=LicenseFormat}" FontSize="11" Foreground="#FF0D0D12" />
-                <Button x:Name="Treatment" Content="בצע טיפול" Grid.Column="3" Background="#FF8EBCD0" Click="Button_ClickTreatment" />
-                <Button x:Name="Fuel" Content="בצע תדלוק" Grid.Column="2" Background="#FF8EBCD0" Click="Button_ClickFuel" />
-                <Button x:Name="updateBus" Content="עדכון" Grid.Column="1" Background="#FF8EBCD0" Click="Button_ClickUpdateBus1" />
-                <Button x:Name="deleteBus" Content="הסר" Grid.Column="0" Background="#FF8EBCD0" Click="Button_ClickDeleteBus1" />
+                <Button x:Name="Treatment" Content="בצע טיפול" Grid.Column="3" Background="#FFFACCAE" Click="Button_ClickTreatment" />
+                <Button x:Name="Fuel" Content="בצע תדלוק" Grid.Column="2" Background="#FFFACCAE" Click="Button_ClickFuel" />
+                <Button x:Name="updateBus" Content="עדכון" Grid.Column="1" Background="#FFFACCAE" Click="Button_ClickUpdateBus1" />
+                <Button x:Name="deleteBus" Content="הסרה" Grid.Column="0" Background="#FFFACCAE" Click="Button_ClickDeleteBus1" />
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="MyDataTemplateLines"                   DataType="local:MyData" >
@@ -49,12 +49,12 @@
                 <TextBlock Grid.Column="9"  Text="{Binding Path=IdentifyNumber}" FontSize="11" Foreground="#FF0D0D12" />
                 <TextBlock Grid.Column="8" Text=":איזור" FontFamily="Ink Free" FontSize="12" Foreground="#FF0A0A0E" FontWeight="Bold"/>
                 <TextBlock Grid.Column="7"  Text="{Binding Path=Area}" FontSize="11" Foreground="#FF0D0D12" />
-                <Button x:Name="updateLine" Content="עדכון" Grid.Column="5" Background="#FF8EBCD0" Click="Button_ClickUpdateLine1" />
-                <Button x:Name="deleteLine" Content="הסרה" Grid.Column="4" Background="#FF8EBCD0" Click="Button_ClickDeleteLine1" />
-                <Button x:Name="addStationToLine" Content="הוספת תחנה לקו" Grid.Column="3" Background="#FF8EBCD0" Click="Button_ClickAddStationToLine1" />
-                <Button x:Name="deleteStationFromLine" Content="מחיקת תחנה מהקו" Grid.Column="2" Background="#FF8EBCD0" Click="Button_ClickDeleteStationFromLine1" />
-                <Button x:Name="addTripToLine" Content="הוספת יציאה לקו" Grid.Column="1" Background="#FF8EBCD0" Click="Button_ClickAddTripToLine" />
-                <Button x:Name="deleteTripFromLine" Content="מחיקת יציאה מהקו" Grid.Column="0" Background="#FF8EBCD0" Click="Button_ClickDeleteTripFromLine" />
+                <Button x:Name="updateLine" Content="עדכון" Grid.Column="5" Background="#FFFACCAE" Click="Button_ClickUpdateLine1" />
+                <Button x:Name="deleteLine" Content="הסרה" Grid.Column="4" Background="#FFFACCAE" Click="Button_ClickDeleteLine1" />
+                <Button x:Name="addStationToLine" Content="הוספת תחנה לקו" Grid.Column="3" Background="#FFFACCAE" Click="Button_ClickAddStationToLine1" />
+                <Button x:Name="deleteStationFromLine" Content="מחיקת תחנה מהקו" Grid.Column="2" Background="#FFFACCAE" Click="Button_ClickDeleteStationFromLine1" />
+                <Button x:Name="addTripToLine" Content="הוספת יציאה לקו" Grid.Column="1" Background="#FFFACCAE" Click="Button_ClickAddTripToLine" />
+                <Button x:Name="deleteTripFromLine" Content="מחיקת יציאה מהקו" Grid.Column="0" Background="#FFFACCAE" Click="Button_ClickDeleteTripFromLine" />
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="MyDataTemplateStations"                   DataType="local:MyData" >
@@ -78,9 +78,9 @@
                 <TextBlock Grid.Column="6"  Text="{Binding Path=NameStation}" FontSize="11" Foreground="#FF0D0D12" />
                 <TextBlock Grid.Column="5" Text=":גישה לנכים" FontFamily="Ink Free" FontSize="12" Foreground="#FF0A0A0E" FontWeight="Bold"/>
                 <TextBlock Grid.Column="4"  Text="{Binding Path=IsAccessible}" FontSize="11" Foreground="#FF0D0D12" />
-                <Button Grid.Column="2" Content="תחנות עוקבות"  Background="#FF8EBCD0" Click="Button_ClickShowPair" />
-                <Button Grid.Column="1" Content="עדכון"  Background="#FF8EBCD0" Click="Button_ClickUpdateStation1" />
-                <Button Grid.Column="0" Content="הסרה"  Background="#FF8EBCD0" Click="Button_ClickDeleteStation1" />
+                <Button Grid.Column="2" Content="תחנות עוקבות"  Background="#FFFACCAE" Click="Button_ClickShowPair" />
+                <Button Grid.Column="1" Content="עדכון"  Background="#FFFACCAE" Click="Button_ClickUpdateStation1" />
+                <Button Grid.Column="0" Content="הסרה"  Background="#FFFACCAE" Click="Button_ClickDeleteStation1" />
             </Grid>
         </DataTemplate>
     </Window.Resources>
@@ -90,9 +90,10 @@
                 <TabItem Header="אוטובוסים">
                     <TabItem.Content>
                         <Grid>
+                            <Image HorizontalAlignment="Left" Height="239" Margin="735,93,0,0" VerticalAlignment="Top" Width="371" Source="לוגו.jpeg" RenderTransformOrigin="0.505,0.767"/>
                             <ListBox x:Name="lbBusesOnSystem" ItemTemplate="{StaticResource MyDataTemplateBuses}"  HorizontalAlignment="Left" Height="294" Margin="55,60,0,0" VerticalAlignment="Top" Width="613"  SelectionMode="Single" ItemsSource="{Binding}" MouseDoubleClick="showDataBuses_doubleClick" />
-                            <Button Content="הוספת אוטובוס" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="144" Click="Button_ClickAddBus" Height="45"/>
-                            
+                            <Button Content="הוספת אוטובוס" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="112" Click="Button_ClickAddBus" Height="30" />
+
                         </Grid>
                     </TabItem.Content>
                 </TabItem>
@@ -100,21 +101,21 @@
                     <TabItem.Content>
                         <Grid>
                             <ListBox x:Name="lbLinesOnSystem" ItemTemplate="{StaticResource MyDataTemplateLines}"  HorizontalAlignment="Left" Height="260" Margin="48,60,0,0" VerticalAlignment="Top" Width="1118"  SelectionMode="Single" MouseDoubleClick="showDataLines_doubleClick" ItemsSource="{Binding}" />
-                            <Button Content="הוספת קו" HorizontalAlignment="Left" Margin="349,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickAddLine"/>
-                            
+                            <Button Content="הוספת קו" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="298,12,0,0" VerticalAlignment="Top" Width="107" Click="Button_ClickAddLine" Height="21"/>
+
                             <ComboBox x:Name="areaCB" HorizontalAlignment="Left" Margin="717,9,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="areaCB_SelectionChanged"/>
 
                         </Grid>
                     </TabItem.Content>
                 </TabItem>
-                <TabItem Header="תחנות" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,-2,-2" Width="66">
+                <TabItem Header="תחנות" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0" Width="66">
                     <TabItem.Content>
                         <Grid>
                             <ListBox x:Name="lbStationsOnSystem" ItemTemplate="{StaticResource MyDataTemplateStations}"  HorizontalAlignment="Left" Height="294" Margin="50,60,0,0" VerticalAlignment="Top" Width="1096"  SelectionMode="Single" MouseDoubleClick="showDataStations_doubleClick" ItemsSource="{Binding}" />
-                            <Button Content="הוספת תחנה" HorizontalAlignment="Left" Margin="133,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickAddStation"/>
-                            
-                            <Button Content="עדכון זמן ומרחק בין זוג תחנות" HorizontalAlignment="Left" Margin="119,369,0,0" VerticalAlignment="Top" Width="179" Click="Button_ClickUpdatePair"/>
-                            <Button Content="הוספת זמן ומרחק בין זוג תחנות" HorizontalAlignment="Left" Margin="398,369,0,0" VerticalAlignment="Top" Width="188" Click="Button_ClickAddPair"/>
+                            <Button Content="הוספת תחנה" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="148,14,0,0" VerticalAlignment="Top" Width="97" Click="Button_ClickAddStation" Height="25"/>
+
+                            <Button Content="עדכון זמן ומרחק בין זוג תחנות" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="333,16,0,0" VerticalAlignment="Top" Width="179" Click="Button_ClickUpdatePair"/>
+                            <Button Content="הוספת זמן ומרחק בין זוג תחנות" Style="{StaticResource myButtonStyle}" HorizontalAlignment="Left" Margin="594,16,0,0" VerticalAlignment="Top" Width="188" Click="Button_ClickAddPair"/>
                         </Grid>
                     </TabItem.Content>
                 </TabItem>
