--- a/UIwpf/showPair.xaml
+++ b/UIwpf/showPair.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="showPair" Height="450" Width="800">
+        Title="showPair" Height="450" Width="800" Icon="לוגו.jpeg">
     <Window.Resources>
         <DataTemplate x:Key="MyDataTemplatePairStations"                   DataType="local:MyData" >
             <Grid>
