--- a/UIwpf/showStation.xaml
+++ b/UIwpf/showStation.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="showStation" Height="700" Width="700">
+        Title="showStation" Height="700" Width="700" Icon="לוגו.jpeg">
     <Window.Resources>
         <DataTemplate x:Key="MyDataTemplateLinesInStations"                   DataType="local:MyData" >
             <Grid>
